scheduler/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-service
  template:
    metadata:
      labels:
        app: scheduler-service
    spec:
      containers:
        - name: scheduler-service
          image: foxt451/mcsvc_scheduler_service:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
