scheduler/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scheduler-service
spec:
  selector:
    app: scheduler-service
  ports:
  - port: 3000
    targetPort: 3000
